@@ -15,6 +15,9 @@ repositories {
     maven {
         url 'https://repo.maven.apache.org/maven2'}
     maven { url 'https://repo.maven.apache.org/maven2/eu/hansolo/fx/countries/17.0.23/' }
+    maven{
+        url 'https://repo.maven.apache.org/maven2/org/openjfx/javafx/17.0.2/javafx-17.0.2.pom'
+    }
 }
 
 ext {
@@ -37,6 +40,12 @@ javafx {
     version = '19'
     modules = ['javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.media','javafx.swing']
 }
+run {
+    doFirst {
+        jvmArgs = ['--module-path', classpath.asPath]
+        jvmArgs = ['--add-modules', 'javafx.controls,javafx.fxml,javafx.web,javafx.media,javafx.swing']
+    }
+}
 
 dependencies {
     implementation('org.controlsfx:controlsfx:11.1.2')
@@ -51,9 +60,7 @@ dependencies {
     implementation('eu.hansolo:tilesfx:17.1.15') {
         exclude(group: 'org.openjfx')
     }
-    implementation('com.github.almasb:fxgl:17.2') {
-        exclude(group: 'org.openjfx')
-    }
+
     implementation group: 'eu.hansolo.fx', name: 'countries', version: '17.0.23'
     implementation group: 'eu.hansolo.fx', name: 'heatmap', version: '17.0.23'
     implementation group: 'eu.hansolo', name: 'toolbox', version: '17.0.23'
@@ -64,6 +71,14 @@ dependencies {
     implementation('com.google.code.gson:gson:2.10.1')
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    testImplementation('org.junit.jupiter:junit-jupiter:5.9.0')
+    implementation group: 'net.minidev', name: 'json-smart', version: '2.5.0'
+    implementation group: 'org.slf4j', name: 'slf4j-nop', version: '2.0.9'
+    implementation 'org.openjfx:javafx-controls:17.0.2'
+    implementation 'org.openjfx:javafx-fxml:17.0.2'
+    implementation group: 'org.openjfx', name: 'javafx-web', version: '17.0.2'
+    implementation group: 'com.github.almasb', name: 'fxgl', version: '17.1'
+
 }
 
 test {
